--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -8,7 +8,7 @@
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank">日本特色书店（2）茑屋书店公寓</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11802999.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/7bb2d0c9ab7783a8335b21ef825b1b37-150x120.jpg" align ="left"></a>TSUTAYA BOOK APARTMENT由创立“茑屋书店”的ＣＣＣ集团（Culture Convenience Club）的TSUTAYA开设的新式设施，就位在新宿站旁边，是一个24小时营业的“放松空间”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 1:35 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank">地毯应定期清洁 避免常见8误区</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803003.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/15ead7e966a6f01a_ttl7dayOvO_shutterstock_1430294426-150x120.jpg" align ="left"></a>坊间流传许多清洁地毯的小技巧。事实上这些技巧中，有许多反而会把情况越弄越糟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 10:58 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank">牙龈红肿发炎怎么办？中医荐1种食物和3味中药</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/18/n11803359.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Inflammation-of-the-gums-food_697827745-150x120.jpg" align ="left"></a>牙龈肿痛、发炎，不只是口腔的问题，以中医观点来讲，这跟脏腑经络有关系。上牙龈属于足阳明胃经，下牙龈属于手阳明大肠经，若上下牙龈皆痛，通常跟肾虚有关。实火属于急性发炎，症状往往来得快，且持续疼痛。虚火属于慢性发炎，牙龈肿痛时好时坏， 迁延日久。牙龈发炎，中医如何治疗？改善牙龈发炎的1种食物和3味中药：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 6:57 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank">食醋清肠排毒 解便秘！这3个时间喝更有益处</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vinegar-benefit-200118-150x120.jpg" align ="left"></a>食醋有清肠排毒、改善便秘等功效。一天三个时间喝醋，对身体有益。但必须知道的是，喝醋有一些注意事项。《本草纲目》记载：“醋能消肿、散水汽、杀邪毒、理诸药。”醋中含有多种氨基酸和有机酸，对人体非常有益。不同时间喝醋，效果也各异。食醋分为化学合成醋、混和醋和酿造醋。醋并非人都适合，合理方法饮用，才能达到预期的效果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 4:37 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank">醋清肠排毒解便秘！这3个时间喝更好</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/16/n11799177.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/vinegar-benefit-200118-150x120.jpg" align ="left"></a>食醋有清肠排毒、改善便秘等功效。一天三个时间喝醋，对身体有益。但必须知道的是，喝醋有一些注意事项。《本草纲目》记载：“醋能消肿、散水汽、杀邪毒、理诸药。”醋中含有多种氨基酸和有机酸，对人体非常有益。不同时间喝醋，效果也各异。食醋分为化学合成醋、混和醋和酿造醋。醋并非人都适合，合理方法饮用，才能达到预期的效果。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月19日 4:37 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank">工作繁忙脑袋卡关 2诀窍保持高超工作效率</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11790375.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/05/120718151848100445-150x120.jpg" align ="left"></a>活用“以两成付出，创造八成价值”的帕累托法则（Pareto principle）。只要仔细观察，将发现两成时间创造八成价值的情形，其实相当之多。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 10:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank">【武汉肺炎 | 持续更新】英权威机构推测：实际感染者恐逾1700人</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/17/n11801312.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1193183155-1-150x120.jpg" align ="left"></a>中国武汉去年12月爆发不明肺炎，今年1月8日确定为新型冠状病毒，世界卫生组织13日将此病毒定名为“2019新型冠状病毒”（2019－nCoV）。目前出现2例死亡病例，该新型冠状病毒已有扩散趋势，泰国和日本近日先后确诊个案，患者皆到过武汉。但在中国仍只有武汉有疫情消息。本文将持续更新关于武汉肺炎疫情的最新进展。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 9:18 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank">辩证疗法快速减鼾治鼾</a><br></h3><a href="https://github.com/aiaxj298/djy/blob/master/gb/20/1/13/n11789610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/6994f0d239cfac976c71974d7c4d3163-150x120.jpg" align ="left"></a> 临床上根据疾病的主要表现和特征，来诊断疾病的过程则称为“辨病”。“病”和“证”的确定，都是以症状为依据的。一病可以出现多证，一证可见于多病之中。因此，临床上必须把“辩证”与“辨病”相结合，这样诊断就会准确。 中医历代医家的辩证医学，是通过长期临床实践，逐渐发展而成，辩证领域很广，举例来说，有：“病因”辩证、“气血津液.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月18日 6:22 AM			</td></tr>
